syntax = "proto3";
package compservice.model.protobuf;

import "event.proto";
import "command.proto";

import "google/protobuf/any.proto";


message CommandCallback {
  string correlationId = 2;
  CommandExecutionResult result = 3;
  ErrorCallback errorInfo = 4;
  repeated Event events = 5;
  optional Command command = 6;
  int32 numberOfEvents = 7;
}
enum CommandExecutionResult {
  COMMAND_EXECUTION_RESULT_SUCCESS = 0;
  COMMAND_EXECUTION_RESULT_FAIL = 1;
  COMMAND_EXECUTION_RESULT_TIMEOUT = 2;
}
message ErrorCallback {
  string message = 1;
  google.protobuf.Any payload = 2;
}